FIXED FILES
UHM COMMITTED WRONG FILES SO THE CODE GOT MESSED UP, BUT THIS SHOULD NOW BE CORRECT

--- a/main.css
+++ b/main.css
@@ -7,8 +7,9 @@ body {
 .header {
     font-size: 80px;
     text-align: center;
-    margin-top: 80px;
     margin-bottom: 40px;
+    margin-top: 0px;
+    padding-top: 0px;
 }
 
 .timer {
